# tg-msg-manager

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  COMMANDS.md  Dockerfile  LICENSE  Makefile  PROJECT_ARCHITECTURE_OVERVIEW.md  README.md  ROADMAP.md  TODO.md  compose.yaml  config.example.json  pyproject.toml  run.py
.skills/: README.md
backlog/: README.md  sqlite_architecture_hardening_todo.md  stagt_0.md  stagt_1.md  stagt_2.md
docs/: ARCHITECTURE_RULES.md  PR_CHECKLIST.md  README.md  db_baseline_report.md  export_smoke_scenarios.md  sqlite_message_id_audit.md
scripts/: cleanup_exports.py  db_diagnostics.py  export_user_context_from_db.py  migrate_to_db.py  reset_and_seed_targets.py
tests/: test_architecture_wrappers.py  test_channel_export_cli.py  test_channel_export_dataset_contracts.py  test_channel_export_discussion_exporter.py  test_channel_export_discussion_fetcher.py  test_channel_export_discussion_mapper.py  test_channel_export_discussion_models.py  test_channel_export_discussion_options.py  test_channel_export_discussion_payload_writer.py  test_channel_export_discussion_renderers.py  test_channel_export_discussion_resolver.py  test_channel_export_included_files_builder.py  test_channel_export_manifest.py  test_channel_export_media_downloader.py  test_channel_export_media_filename.py  test_channel_export_media_policy.py  test_channel_export_payload_writer.py  test_channel_export_plan_builder.py  test_channel_export_post_fetcher.py  test_channel_export_post_mapper.py  test_channel_export_renderers.py  test_channel_export_result_builder.py  (+30 more)
(+875 files in other folders)
