[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tg-msg-manager"
version = "0.1.0"
description = "CLI-утилита для удаления своих сообщений из чатов Telegram (на базе Telethon)."
authors = [{ name = "R.P." }]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "telethon>=1.36.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.15.0,<0.16",
]

[project.scripts]
tg-msg-manager = "tg_msg_manager.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tg_msg_manager*"]

[tool.ruff]
target-version = "py39"
