[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tg-msg-manager"
version = "0.1.0"
description = "Локальная Telegram export/data CLI-утилита на базе Telethon."
authors = [{ name = "R.P." }]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.9"
dependencies = [
  "telethon>=1.36.0",
  "pydantic>=2.0.0",
  "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.15.0,<0.16",
  "pytest>=8.0.0,<9",
]

[project.scripts]
tg-msg-manager = "tg_msg_manager.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tg_msg_manager*"]

[tool.ruff]
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
